Clean code: Rename (access|egress)(Stop|Leg) to (access|egress)Path in Raptor API.